tests/NormalTests/paczka2/big_fuzzy/56477607.err
Error in line 6: ffhn9OAVZf S362 77,2
Error in line 19: wNzqKfDa5e A89a 19,1
Error in line 27: A897 A855 41,7
Error in line 52: A897 A897 43,47
Error in line 55: ffhn9OAVZf A855 254,2
Error in line 61: HUQGA S362 38,1
Error in line 21: wNzqKfDa5e A897 19,7
Error in line 60: ffhn9OAVZf S362 42,4
Error in line 70: wNzqKfDa5e A855 20,7
Error in line 62: HUQGA A855 71,9
Error in line 102: OzRuEmU S362 20,2
Error in line 114: WJ8FVUJFht A897 -1,4
Error in line 123: ffhn9OAVZf A897 99,7
Error in line 134: ffhn9OAVZf A855 32,6
Error in line 54: A897 A897 107,9
Error in line 119: wNzqKfDa5e A897 2,0
Error in line 137: A897 A855 158,3
Error in line 140: A897 A564 6,3
Error in line 131: 1AVm9PE A855 45,1
Error in line 156: 1AVm9PE S362 76,6
Error in line 162: wNzqKfDa5e A564 4,4
Error in line 167: ffhn9OAVZf A564 21,8
Error in line 178: !!hn9OAVZ! A897 97,1
Error in line 191: WJ8FVUJFht S362 22,3
Error in line 195: WJ8FVUJFht A564 96,5
Error in line 208: wNzqKfDa5e S362 11,0
Error in line 219: WJ8FVUJFht A564 62,1
Error in line 206: HUQGA A855 514,3
Error in line 234: WJ8FVUJFht A897 35,2
Error in line 229: 1AVm9PE S362 61,9
Error in line 232: A897 A897 13,0
Error in line 243: ffhn9OAVZf A855 39,8
